# LearningGame

./: .gitignore  ReadMe.txt
Neural_Network/: Matrix.js  NeuralNetwork.js  ReadMe.md  Training.js  index.html  perceptron.js  sketch.js  sketch_nn.js  style.css
PoolTable/: Dockerfile  ReadMe.md  app.py  databaseManager.py  requirements.txt
PoolTable/sql/: init.sql  matches_202404030911.sql  upgrade1.sql
PoolTable/static/: style.css
PoolTable/templates/: index.html
Rocket/: CMakeLists.txt
Rocket/src/: CMakeLists.txt  main.cpp
Rocket/src/Graphics/: Color.h  Screen.cpp  Screen.h  ScreenBuffer.h
Rocket/src/Input/: GameController.h  InputAction.h  InputController.cpp  InputController.h
Rocket/src/Scenes/: ArcadeScene.cpp  ArcadeScene.h  Scene.h
Rocket/src/Scenes/Game/: BoxShape.h  GameObject.h  GamePhysicsObject.h  Particle.cpp  Particle.h  Rect.cpp  Rect.h  RigidBody.h  Rocketship.cpp  Rocketship.h
Rocket/src/Shapes/: AARectangle.cpp  Line2D.cpp  Rocket.cpp  Rocket.h  Star.cpp  Triangle.h
Rocket/src/utils/: DynamicIntArray.cpp  Utils.cpp  Vec2D.cpp
SDL_Learnign/: CMakePresets.json  Pentagon.txt
SDL_Learnign/src/App/: App.cpp  App.h
SDL_Learnign/src/Games/: Game.h
SDL_Learnign/src/Graphics/: Color.cpp  Screen.h  ScreenBuffer.cpp
SDL_Learnign/src/Input/: GameController.cpp  InputController.cpp
SDL_Learnign/src/Scenes/: ArcadeScene.cpp  ArcadeScene.h  GameScene.cpp  GameScene.h
SDL_Learnign/src/Shapes/: AARectangle.h  Circle.cpp  Line2D.h  Shape.h  Star.h
SDL_Learnign/src/utils/: DynamicIntArray.h  FileCommandLoader.cpp  FileCommandLoader.h  Utils.cpp  Utils.h  Vec2D.cpp
src/: CMakeLists.txt  main.cpp
src/App/: App.cpp  App.h
src/Games/: Game.h
src/Games/BreakOut/: BreakOut.cpp  BreakOut.h  Excluder.cpp  Excluder.h  Paddle.cpp
src/Graphics/: Color.cpp  Color.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h
src/Input/: GameController.cpp  GameController.h  InputAction.h  InputController.cpp  InputController.h
src/Scenes/: ArcadeScene.cpp  ArcadeScene.h  GameScene.cpp  GameScene.h  Scene.h
src/Shapes/: AARectangle.h  ChesePiece.h  ChessBoard.h  ChessPiece.cpp  Chessboard.cpp  Circle.h  Line2D.cpp  Line2D.h  Pawn.cpp  Pawn.h  Shape.h  Star.cpp  Star.h  Triangle.cpp  Triangle.h
src/utils/: DynamicIntArray.cpp  DynamicIntArray.h  FileCommandLoader.cpp  FileCommandLoader.h  Utils.cpp  Utils.h  Vec2D.cpp  Vec2D.h
stock/: ReadMe.md  api_test.ipynb  async_data_service.py  backup.sh  company_utils.py  config.py  database.py  logging_config.py  parallel_showcase.py  requirements.txt  restore_db.sh  scrape.py  stockCalc.ipynb  stock_help.py  stocks.py  stocks_data_service.py  stocks_example.py  sync_data_service.py  test_stock_data_serice.py  utils.py
stock/db/: company_db.py  db_common.py  ticker_db.py
stock/query_test/: test.js
stock/src/: scrape.py  sync_data_service.py
stock/src/db/: company_db.py  database.py  db_common.py  ticker_db.py
stock/test/: test_stock_data_serice.py  test_stock_data_service.py  transfer_data.py
(+10 files in other folders)
